--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
